--- a/public/css/partials/_colors.scss
+++ b/public/css/partials/_colors.scss
@@ -1,1 +1,14 @@
 $soft-white: #EEEEEE;
+$white: #FFFFFF;
+$gold: #C2B37A;
+$dark-gold: #af9c50;
+$blue-grey: #b0bec5;
+$true-black: #000000;
+$black: #212121;
+
+//Box Shadows
+$shad-black:inset 0 0 3px 1px rgba(48,48,48,0.5);
+
+//Shadows
+$z-1: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+$z-2: 0 1px 7px rgba(0,0,0,0.2), 0 1px 2px rgba(0,0,0,0.4);
