--- a/public/css/partials/_typography.scss
+++ b/public/css/partials/_typography.scss
@@ -1,1 +1,6 @@
 //Typography
+@import 'https://fonts.googleapis.com/css?family=Quicksand|Raleway|Roboto';
+
+$quicksand: 'Quicksand', sans-serif;
+$raleway: 'Raleway', sans-serif;
+$roboto: 'Roboto', sans-serif;
