--- a/public/css/screen.scss
+++ b/public/css/screen.scss
@@ -13,6 +13,7 @@
 @import "partials/typography";
 
 //PARTIALS
+@import "partials/reset";
 @import "partials/grid";
 @import "partials/general";
 @import "partials/header";
