--- a/public/css/partials/_general.scss
+++ b/public/css/partials/_general.scss
@@ -1,3 +1,37 @@
-*{
-  
+* {
+	box-sizing: border-box;
+}
+
+html {
+	font-family: $roboto;
+}
+
+body {
+  padding-top: 65px;
+	background-color: $soft-white;
+}
+
+.card {
+  padding:15px;
+	border-radius: 1px;
+	background-color: $white;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	width:100%;
+}
+
+.transitionPrepare {
+	transition: all 0s;
+}
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+	color: #404040;
+}
+::-moz-placeholder { /* Firefox 19+ */
+	color: #404040;
+}
+:-ms-input-placeholder { /* IE 10+ */
+	color: #404040;
+}
+:-moz-placeholder { /* Firefox 18- */
+	color: #404040;
 }
