--- a/public/css/partials/_header.scss
+++ b/public/css/partials/_header.scss
@@ -1,3 +1,137 @@
 header{
-  
+  >div{
+    position: fixed;
+  	top:0px;
+  	width:100%;
+  	background-color: $gold;
+  	box-shadow: $z-2;
+    @media screen and (max-width: $break-s){
+      max-height:40px;
+    }
+    > div {
+      width:100%;
+  	  text-align:center;
+      > ul {
+        list-style-type: none;
+    	  margin: 0;
+    	  padding: 0;
+    	  overflow: hidden;
+    	  clear:both;
+    	  width:100%;
+    	  max-height:0;
+    	  overflow: hidden;
+    	  -webkit-transition: max-height 0.8s;
+    	  -moz-transition: max-height 0.8s;
+    	  transition: max-height 0.8s;
+        > li{
+          float: none;
+        	height: auto;
+          &:hover {
+            box-shadow: $shad-black;
+          }
+          > a{
+            display:block;
+          	padding: 0 8px;
+          	font-family: 'Dosis', sans-serif;
+          	font-weight: light;
+          	font-size: 17px;
+          	color:#fff;
+          	text-decoration: none;
+          	text-align: right;
+          	line-height: 50px;
+          }
+        }
+      }
+      > div {
+        height:50px;
+      	cursor:pointer;
+      	font-family:'Raleway';
+      	font-weight:bold;
+      	font-size:40px;
+      	line-height:50px;
+      	color:#212121;
+      	display:inline;
+        @media screen and (max-width: $break-s){
+          font-size: 30px;
+          line-height: 40px;
+        }
+      }
+      >form {
+        width: 0;
+       	float: left;
+        height:0;
+    		padding:0;
+    		-webkit-transition: width 0.8s;
+    		-moz-transition: width 0.8s;
+    		transition: width 0.8s;
+        input{
+          width:100%;
+        	height:30px;
+        	padding: 0;
+          background-color:rgba(0,0,0,0);
+        	border:none;
+        	border-bottom:1px solid #404040;
+        	color:#404040;
+        	box-shadow:none;
+        	border-radius:0;
+          &:focus{
+            outline:none;
+        	  border-bottom: 1px solid #202020;
+          }
+        }
+        &.responsive {
+          width: calc(100vw - 100px);
+          height:30px;
+      		padding:10px 5px;
+          input{
+            padding: 0 10px;
+          }
+        }
+      }
+      >figure {
+        display:block;
+      	height:50px;
+      	cursor:pointer;
+      	width:50px;
+      	background-color: rgba(0,0,0,0);
+      	background-repeat:no-repeat;
+      	background-size:50px;
+        margin:0 20px ;
+        &:hover{
+          box-shadow: $shad-black;
+        }
+        @media screen and (max-width: $break-s){
+          height:40px;
+          width:40px;
+          margin:0;
+        	background-size:40px;
+          background-position:0px 0px;
+        }
+      }
+      &.responsive{
+        >ul{
+          border-top: 1px solid black;
+      	  max-height: 200px;
+        }
+      }
+    }
+  }
+}
+
+#navbar-search {
+	background-image:url("/assets/images/misc/search.svg");
+	float:left;
+  @media screen and (max-width: $break-s){
+    background-size:30px;
+    background-position:5px 5px;
+    margin-left:5px;
+  }
+}
+
+#navbar-opener {
+	background-image:url("/assets/images/misc/menu.svg");
+	float:right;
+  @media screen and (max-width: $break-s){
+    margin-right:5px;
+  }
 }
