--- a/public/css/partials/_item.scss
+++ b/public/css/partials/_item.scss
@@ -1,3 +1,144 @@
-.item{
-  
+.itemcard{
+  padding:0;
+  flex-wrap: wrap;
+  flex-direction:row;
+  display:flex;
+  text-align: center;
+  @media screen and (max-width: $break-m){
+    max-width: 650px;
+    margin:0 auto;
+  }
+  >div{
+    padding:0;
+    margin:0;
+    flex:1;
+    flex-direction:column;
+    display:flex;
+    >img{
+      flex:1;
+      min-width: 350px;
+      @media screen and (max-width: $break-m){
+        width:100%;
+        min-width: 300px;
+      }
+      @media screen and (max-width: $break-s){
+        width:100%;
+        min-width: 250px;
+      }
+    }
+    >table{
+      min-width: 350px;
+      @media screen and (max-width: $break-m){
+        width:100%;
+      }
+      >tbody{
+        >tr{
+          width:100%;
+          &:nth-of-type(1){
+            background-color: $gold;
+          }
+          >td{
+            width:100%;
+            >h2{
+              display:inline;
+              @media screen and (max-width: $break-m){
+                margin:15px 0;
+              }
+              &:nth-of-type(1){
+                float:left;
+                margin-left: 5px;
+              }
+              &:nth-of-type(2){
+                float:right;
+                margin-right:5px;
+              }
+            }
+            >p{
+              margin: 15px 0;
+            }
+            >table{
+              width:100%;
+              td{
+                width:100%;
+                text-align: center;
+                >h3{
+                  margin:25px auto 3px auto;
+                }
+                >ul{
+                  margin:0;
+                  padding:0;
+                  >div{
+                    box-shadow: none;
+                    padding:0;
+                    >li{
+                      float:left;
+                      transition: box-shadow 0.15s;
+                      &:hover{
+                        box-shadow: $z-1;
+                      }
+                      &:active{
+                        background-color: #ccc;
+                      }
+                      .circ{
+                        width:20px;
+                        height:20px;
+                        float:left;
+                        margin:5px;
+                        border-radius:10px;
+                      }
+                      font{
+                        line-height: 30px;
+                        &:nth-of-type(1){
+                          float:right;
+                        }
+                        &:nth-of-type(1){
+                          float:left;
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+            >div{
+              flex-wrap: wrap;
+              flex-direction:row;
+              display:flex;
+              width:100%;
+              margin-top:10px;
+              >div{
+                flex:1;
+                display: inline-block;
+                padding:10px;
+                text-align: center;
+                -webkit-user-select: none;
+                -moz-user-select: none;
+                -ms-user-select: none;
+                user-select: none;
+                cursor:pointer;
+                &:nth-of-type(1){
+                  background-color: $gold;
+                }
+                &:nth-of-type(2){
+                  background-color: $black;
+                  color:$soft-white;
+                }
+                &:hover{
+                  &:nth-of-type(1){
+                    background-color:$dark-gold;;
+                  }
+                  &:nth-of-type(2){
+                    background-color: $true-black;
+                  }
+                }
+                &:active{
+                  box-shadow: $shad-black;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
